[gd_scene load_steps=4 format=3 uid="uid://cchsripbukvuf"]

[ext_resource type="Script" path="res://addons/pa_performance_monitor/performance_snapshot/performance_snapshot.gd" id="1_t4tmf"]
[ext_resource type="PackedScene" uid="uid://ca2i3dseb2ki1" path="res://addons/pa_performance_monitor/performance_snapshot/results_panel.tscn" id="2_yxfph"]
[ext_resource type="PackedScene" uid="uid://df1u7wfoafe4e" path="res://addons/pa_performance_monitor/performance_snapshot/save_panel.tscn" id="3_oojcg"]

[node name="PerformanceSnapshot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
script = ExtResource("1_t4tmf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="MouseBlockControl" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false

[node name="ResultsPanel" parent="CanvasLayer" instance=ExtResource("2_yxfph")]
unique_name_in_owner = true

[node name="SavePanel" parent="CanvasLayer" instance=ExtResource("3_oojcg")]
unique_name_in_owner = true
